INTYGFV-14722: Added possibility to print instead of download sjukfall list for browsers other than IE.